Issue 249, fix references to methods not in MIDP 2
git-svn-id: https://zxing.googlecode.com/svn/trunk@1073 59b500cc-1b3d-0410-9834-0bbf25fbcc57